@@ -1,3 +1,4 @@
+* Protect trusted devices against brute force attack
 * Make ModelView.parse_view public
 * Add help for each value to selection and multiselection
 * Use safe_join in SharedDataMiddlewareIndex (issue10068)
